@@ -2,7 +2,9 @@ Cascading Change Log
 
 unreleased
 
-  Fixed bug where unsafe filename characters were leaking into temporary filenames, didn't take the first time. 
+  Added c.t.TemplateTap constructor arg that allows for independent tuple selection for use by template path.
+
+  Fixed bug where unsafe filename characters were leaking into temporary filenames, didn't take the first time.
 
 1.0.3
 
